# doremi_subscription

./: geektrust.py  requirements.txt  setup.cfg  setup.py
sample_input/: input2.txt  input4.txt
src/: constants.py  main.py  utils.py
