[metadata]
# replace with your username:
name = rjrajivjha
version = 0.0.1
author = Rajiv Kumar Jha
author_email = fork.rajiv@gmail.com
description = Find Reminder date for subscription renewal
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6